# ACL

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake_with_dotnet.yml
AngelScript/: csloader.as  main.as  preinit.as
CppBridge/: ACL.runtimeconfig.json  CMakeLists.txt  library.cpp  library.h
CppBridge/angelscript/: as_memory.cpp  as_scriptfunction.h
CppBridge/angelscript/ida/angelscript/: as_criticalsection.h  as_module.h  as_scriptfunction.h
CppBridge/angelscript/ida/include/: angelscript.h
CppBridge/include/: angelscript.h
CppBridge/include/ida/: angelscript_ida.h  as_thread_ida.h
CppBridge/includes/: angelscript.h
CsharpLoader/: ACL.sln  EasyRebornFramework.sln
CsharpLoader/ACL/: ACL.csproj  ACL.sln
CsharpLoader/ACL.Sample/: ACL.Sample.csproj  TestPlugin.cs
CsharpLoader/ACL.SourceGenerator/: ACL.SourceGenerator.csproj  ScriptGenerator.cs
CsharpLoader/ACL/Extension/: ColorExtensions.cs
CsharpLoader/ACL/Feature/: Buffer.cs  Entity.cs  EventManager.cs  GlobalFunctions.cs  Items.cs  ModelType.cs  Player.cs  PlayerTag.cs  Server.cs
CsharpLoader/ACL/Loader/: Plugin.cs  PluginAssemblyLoadContext.cs  PluginLoader.cs
CsharpLoader/ACL/Managed/: ModuleContext.cs  ScriptContext.cs  ScriptEngine.cs  ScriptErrorType.cs  ScriptFunction.cs  ScriptModule.cs  ScriptObjectBase.cs  ScriptProperty.cs  UserData.cs
CsharpLoader/ACL/Managed/ScriptObject/: ManagedAudio.cs  ManagedCfgParser.cs  ManagedDoor.cs  ManagedEntity.cs  ManagedGraphics.cs  ManagedItems.cs  (+5 more)
CsharpLoader/ACL/Private/: AngelCallback.cs  AngelObject.cs  CallConv.cs  EventType.cs  GetModuleFlags.cs  IRegistryObject.cs  NativeBindings.cs  PointerReference.cs  UnmanagedCfgParser.cs  UnmanagedPlayer.cs  UnmanagedServer.cs
CsharpLoader/ACL/Util/: BlitzTool.cs
CsharpLoader/ERF/: ERF.csproj  Loader.cs  ScriptErrorType.cs
CsharpLoader/ERF.Example/: ERF.Example.csproj  TestPlugin.cs
CsharpLoader/ERF.NET/: ERF.NET.csproj
CsharpLoader/ERF.NET/Binding/: NativeBindings.cs
CsharpLoader/ERF.NET/Feature/: Buffer.cs  EString.cs  EventManager.cs  GlobalFunctions.cs
CsharpLoader/ERF.NET/Loader/: IPlugin.cs  Plugin.cs  PluginAssemblyLoadContext.cs  PluginLoader.cs
CsharpLoader/ERF.NET/Managed/: IObjectClass.cs  ModuleContext.cs  ScriptContext.cs  ScriptEngine.cs  ScriptErrorType.cs  ScriptFunction.cs  ScriptModule.cs  UserData.cs
CsharpLoader/ERF.NET/Private/: CallConv.cs  EventType.cs  GetModuleFlags.cs  NativeBindings.cs  ScriptCallback.cs
CsharpLoader/ERF/Binding/: NativeBindings.cs
CsharpLoader/ERF/Feature/: Buffer.cs  EString.cs  GlobalFunctions.cs
CsharpLoader/ERF/Managed/: IObjectClass.cs  ScriptContext.cs  ScriptEngine.cs  ScriptFunction.cs
(+12 files in other folders)
